Apache Tez Change Log
=====================

Release 0.7.1: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-2768. Log a useful error message when the summary stream cannot be closed when shutting
  down an AM.
  TEZ-2745. ClassNotFoundException of user code should fail dag
  TEZ-2761. addendum fix build failure for java 6
  TEZ-2761. Tez UI: update the progress on the dag and vertices pages with info from AM
  TEZ-2754. Tez UI: StartTime & EndTime is not displayed with right format in Graphical View
  TEZ-2731. Fix Tez GenericCounter performance bottleneck
  TEZ-2752. logUnsuccessful completion in Attempt should write original finish
  time to ATS
  TEZ-2755. Fix findbugs warning in TezClient
  TEZ-2767. Make TezMxBeanResourceCalculator the default resource calculator.
  TEZ-2602. Throwing EOFException when launching MR job
  TEZ-2575. Handle KeyValue pairs size which do not fit in a single block in PipelinedSorter
  TEZ-2198. Fix sorter spill counts
  TEZ-2440. Sorter should check for indexCacheList.size() in flush()
  TEZ-2742. VertexImpl.finished() terminationCause hides member var of the
  same name
  TEZ-2662. Provide a way to check whether AM or task opts are valid and error if not.
  TEZ-2300. TezClient.stop() takes a lot of time or does not work sometimes
  TEZ-2734. Add a test to verify the filename generated by OnDiskMerge.
  TEZ-2732. DefaultSorter throws ArrayIndex exceptions on 2047 Mb size sort buffers
  TEZ-2687. ATS History shutdown happens before the min-held containers are released
  TEZ-2629. LimitExceededException in Tez client when DAG has exceeds the default max counters
  TEZ-2719. Consider reducing logs in unordered fetcher with shared-fetch option
  TEZ-2540. Create both tez-dist minimal and minimal.tar.gz formats as part of build
  TEZ-2630. TezChild receives IP address instead of FQDN.
  TEZ-2211. Tez UI: Allow users to configure timezone
  TEZ-2623. Fix module dependencies related to hadoop-auth.