@@ -56,6 +56,7 @@
     <script src="bower_components/ember-addons.bs_for_ember/dist/js/bs-items-action-bar.min.js"></script>
     <script src="bower_components/ember-addons.bs_for_ember/dist/js/bs-badge.min.js"></script>
     <script src="bower_components/ember-addons.bs_for_ember/dist/js/bs-label.min.js"></script>
+    <script src="bower_components/ember-addons.bs_for_ember/dist/js/bs-progressbar.min.js"></script>
     <script src="bower_components/antiscroll/antiscroll.js"></script>
     <script src="bower_components/jquery-mousewheel/jquery.mousewheel.js"></script>
     <script src="bower_components/ember-table/dist/ember-table.js"></script>
